@@ -1,6 +1,8 @@
 gigedit (0.0.3-1) unreleased; urgency=low
 
   * Initial Release.
+  * compile with debug info (-g) and don't strip binary
+    (to allow debugging)
 
- -- Christian Schoenebeck <cuse@users.sourceforge.net>  Mon, 09 Apr 2007 19:00:13 +0200
+ -- Christian Schoenebeck <cuse@users.sourceforge.net>  Wed, 30 May 2007 02:18:18 +0200
 
